[tool.poetry]
name = "advent-of-code-2023"
version = "0.1.0"
description = ""
authors = ["Ben <ben132451@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.5.2"
tqdm = "^4.66.1"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
ruff = "^0.1.6"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
